--- a/frontend/styles/modules/discussion.module.css
+++ b/frontend/styles/modules/discussion.module.css
@@ -1,3 +1,4 @@
+
  .receiver {
    width: 100%;
    padding-bottom: 10px;
@@ -136,7 +137,10 @@
 
 
  @media screen and (min-width: 768px) {
-
+  body .sectionChatPage{
+    height:  100vh; 
+    overflow-y: hidden; 
+  } 
    .sectionChat {
      width: 100%;
      display: flex;
