--- a/frontend/styles/modules/discussion.module.css
+++ b/frontend/styles/modules/discussion.module.css
@@ -1,315 +1,313 @@
 
- .receiver {
-   width: 100%;
-   padding-bottom: 10px;
-   padding-left: 5px;
-   height: fit-content;
-   display: flex;
-   align-items: center;
-   border-bottom: 1px solid white;
- }
+.receiver {
+  width: 100%;
+  padding-bottom: 10px;
+  padding-left: 5px;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid white;
+}
 
+.receiver img,
+.containerChatMessage img {
+  width: 50px;
+  height: 50px;
+  margin: 0px 10px;
+  border: 1px solid white;
+  border-radius: 100%;
+}
 
- .receiver img,
- .containerChatMessage img {
-   width: 50px;
-   height: 50px;
-   margin: 0px 10px;
-   border: 1px solid white;
-   border-radius: 100%;
- }
+.containerChatMessage {
+  width: 100%;
+  height: 100vh;
+  padding: 20px;
+  overflow-x: hidden;
+}
 
- .containerChatMessage {
-   width: 100%;
-   height: 100vh;
-   padding: 20px;
-   
- }
+.contentMesReceiver,
+.contentMesSender {
+  margin-bottom: 20px;
+}
 
- .contentMesReceiver,
- .contentMesSender {
-   margin-bottom: 20px;
- }
+.contentMesReceiver div {
+  display: flex;
+  align-items: center;
+}
 
- .contentMesReceiver div {
-   display: flex;
-   align-items: center;
+.containerChatMessage .contentMesReceiver div pre,
+.contentMesSender pre {
+  min-width: 50%;
+  max-width: 80%;
+  padding: 10px;
+  margin-bottom: 5px;
+  border-radius: 20px;
+  box-sizing: border-box;
+  text-wrap: wrap;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 
- }
+  background: var(--primary-bg);
+}
 
- .contentMesReceiver div pre,
- .contentMesSender pre {
-   width: 80%;
-   padding: 10px;
-   margin-bottom: 5px;
-   border-radius: 20px;
-   text-wrap: wrap;
-   word-wrap: break-word;
-   background: var(--primary-bg);
+.contentMesReceiver p {
+  margin-left: 80px;
+}
 
- }
+.contentMesSender {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
 
- .contentMesReceiver p {
-   margin-left: 80px;
- }
-
- .contentMesSender {
-   display: flex;
-   flex-direction: column;
-   align-items: flex-end;
- }
-
- .contentMesSender pre {
+.contentMesSender pre {
   word-wrap: break-word;
   text-wrap: wrap;
-   background: var(--second-blue);
- }
+  background: var(--second-blue);
+}
 
- .contentMesSender p,
- .contentMesReceiver p {
-   font-size: small;
- }
+.contentMesSender p,
+.contentMesReceiver p {
+  font-size: small;
+}
 
- .middleBloc {
-   width: 100%;
-   height: 100vh;
-   display: flex;
-   flex-direction: column;
-   padding-bottom: 0rem;
-   overflow-y: scroll;
- }
+.middleBloc {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 0rem;
+  overflow-y: scroll;
+}
 
- .contentFromChat {
-   width: 100%;
-   height: 60px;
-   position: fixed;
-   bottom: 0;
-   display: flex;
-   align-items: center;
+.contentFromChat {
+  width: 100%;
+  height: 60px;
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  align-items: center;
 
-   border-top: 1px solid white;
-   background-color: black;
-   z-index: 90;
- }
+  border-top: 1px solid white;
+  background-color: black;
+  z-index: 90;
+}
 
- .contentFromChat form {
-   display: flex;
-   align-items: center;
-   justify-content: flex-start;
-   gap: 5px;
-   width: 100%;
-   margin-left: 10px;
-   padding-right: 10px;
-   box-sizing: border-box;
- }
+.contentFromChat form {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 5px;
+  width: 100%;
+  margin-left: 10px;
+  padding-right: 10px;
+  box-sizing: border-box;
+}
 
- .contentFromChat form textarea {
-   height: 40px;
-   padding: 10px;
-   font-size: 18px;
-   border-radius: 10px;
-   border: none;
-   color: white;
-   background: var(--primary-bg);
-   resize: none;
-   outline: none;
- }
+.contentFromChat form textarea {
+  height: 40px;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 10px;
+  border: none;
+  color: white;
+  background: var(--primary-bg);
+  resize: none;
+  outline: none;
+}
 
- .contentFromChat form textarea::-webkit-scrollbar {
-   width: 0px;
-   height: 0px;
-   background: transparent;
- }
+.contentFromChat form textarea::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+  background: transparent;
+}
 
- .contentFromChat form button {
-   width: fit-content;
-   background: transparent;
-   border: none;
-   cursor: pointer;
- }
+.contentFromChat form button {
+  width: fit-content;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
 
- .contentFromChat form .emoji,
- .contentFromChat form .fa-paper-plane {
-   width: fit-content;
-   font-size: 25px;
-   cursor: pointer;
- }
+.contentFromChat form .emoji,
+.contentFromChat form .fa-paper-plane {
+  width: fit-content;
+  font-size: 25px;
+  cursor: pointer;
+}
 
+@media screen and (min-width: 768px) {
+  body .sectionChatPage {
+    height: 100vh;
+    overflow-y: hidden;
+  }
+  .sectionChat {
+    width: 100%;
+    display: flex;
+  }
 
- @media screen and (min-width: 768px) {
-  body .sectionChatPage{
-    height:  100vh; 
-    overflow-y: hidden; 
-  } 
-   .sectionChat {
-     width: 100%;
-     display: flex;
-   }
+  .middleBloc {
+    width: 40%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 
-   .middleBloc {
-     width: 40%;
-     height: 100vh;
-     display: flex;
-     flex-direction: column;
-    
-     overflow-y: scroll;
-   }
+    overflow-y: scroll;
+  }
 
-   .middleBloc .fa-arrow-left {
-     display: none;
-   }
-   .containerChatMessage {
+  .middleBloc .fa-arrow-left {
+    display: none;
+  }
+  .containerChatMessage {
     height: 100vh;
     overflow-y: scroll;
     padding: 20px;
     margin-bottom: 200px;
   }
 
-   .contentFromChat {
-     width: 40%;
-     height: 60px;
-     position: fixed;
-     bottom: 0px;
-     background: var(--secondary-bg);
-     border-top: none;
-   }
+  .contentFromChat {
+    width: 40%;
+    height: 60px;
+    position: fixed;
+    bottom: 0px;
+    background: var(--secondary-bg);
+    border-top: none;
+  }
 
-   .contentFromChat form textarea {
-     width: 100%;
-     height: 50px;
-   }
+  .contentFromChat form textarea {
+    width: 100%;
+    height: 50px;
+  }
 
-   .middleBloc::-webkit-scrollbar {
-     width: 0px;
-     height: 0px;
-     background: transparent;
-   }
+  .middleBloc::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+    background: transparent;
+  }
 
-   .menuLeft {
-     display: block;
-     width: 30%;
-     padding-left: 30px;
-   }
+  .menuLeft {
+    display: block;
+    width: 30%;
+    padding-left: 30px;
+  }
 
-   .menuLeft {
-     display: flex;
-     flex-direction: column;
-     gap: 20px;
-   }
+  .menuLeft {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 
-   .menuLeft .userActual a {
-     width: 80%;
-     display: flex;
-     align-items: center;
-     padding: 5px;
-   }
+  .menuLeft .userActual a {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+  }
 
-   .menuLeft .userActual a img {
-     width: 50px;
-     height: 50px;
-     border: 1px solid gray;
-     border-radius: 100%;
-   }
+  .menuLeft .userActual a img {
+    width: 50px;
+    height: 50px;
+    border: 1px solid gray;
+    border-radius: 100%;
+  }
 
-   .menuLeft .userActual a span {
-     padding-left: 15px;
-     text-transform: capitalize;
-   }
+  .menuLeft .userActual a span {
+    padding-left: 15px;
+    text-transform: capitalize;
+  }
 
-   .menuLeft a {
-     display: flex;
-     align-items: center;
-     gap: 5px;
-     font-size: 18px;
-   }
+  .menuLeft a {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 18px;
+  }
 
-   .menuLeft a i {
-     font-size: 35px;
-     padding: 8px;
-     color: var(--fds-blue-80);
-     border-radius: 100%;
-   }
+  .menuLeft a i {
+    font-size: 35px;
+    padding: 8px;
+    color: var(--fds-blue-80);
+    border-radius: 100%;
+  }
 
-   .menuLeft a:hover {
-     width: 80%;
+  .menuLeft a:hover {
+    width: 80%;
 
-     background: var(--secondary-bg);
-     border-radius: 10px;
-   }
+    background: var(--secondary-bg);
+    border-radius: 10px;
+  }
 
-   .menuLeft hr {
-     width: 80%;
-     border-color: gray;
-   }
+  .menuLeft hr {
+    width: 80%;
+    border-color: gray;
+  }
 
-   .menuLeft h4 {
-     color: gray;
-     text-transform: capitalize;
-   }
+  .menuLeft h4 {
+    color: gray;
+    text-transform: capitalize;
+  }
 
-   .menuLeft .newPostContent {
-     display: flex;
-     flex-direction: column;
-   }
+  .menuLeft .newPostContent {
+    display: flex;
+    flex-direction: column;
+  }
 
-   .menuLeft .newPostContent a {
-     display: flex;
-     align-items: center;
-     gap: 10px;
-     padding: 10px 0px;
-     padding-left: 10px;
-     font-size: 18px;
-     text-transform: capitalize;
-   }
+  .menuLeft .newPostContent a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 0px;
+    padding-left: 10px;
+    font-size: 18px;
+    text-transform: capitalize;
+  }
 
-   .menuLeft .newPostContent a i {
-     padding: 8px;
-     font-size: 22px;
-     border-radius: 100%;
-     color: #fff;
-     background: var(--primary-bg);
-   }
+  .menuLeft .newPostContent a i {
+    padding: 8px;
+    font-size: 22px;
+    border-radius: 100%;
+    color: #fff;
+    background: var(--primary-bg);
+  }
+}
 
- }
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .menuLeft {
+    display: block;
+    width: 50%;
+    padding-left: 30px;
+  }
 
+  .middleBloc {
+    width: 50%;
+  }
 
- @media screen and (min-width: 768px) and (max-width: 1024px) {
-   .menuLeft {
-     display: block;
-     width: 50%;
-     padding-left: 30px;
-   }
+  .contentFromChat {
+    width: 55%;
+  }
+}
 
-   .middleBloc {
-     width: 50%;
-   }
+@media screen and (max-width: 767px) {
+  .menuLeft {
+    display: none;
+  }
 
-   .contentFromChat {
-     width: 55%;
-   }
- }
-
- @media screen and (max-width: 767px) {
-   .menuLeft {
-     display: none;
-   }
-  
-   .middleBloc {
-     width: 100%;
-     display: flex;
-   }
-   .containerChatMessage {
+  .middleBloc {
+    width: 100%;
+    display: flex;
+  }
+  .containerChatMessage {
     width: 90%;
     height: fit-content;
     padding: 20px;
     padding-bottom: 60px;
   }
-   .contentFromChat{
+  .contentFromChat {
     width: 100%;
     left: 0px;
-   }
-   .contentFromChat form textarea {
+  }
+  .contentFromChat form textarea {
     width: 90%;
     height: 40px;
   }
- }
+}
