--- a/frontend/styles/modules/group.module.css
+++ b/frontend/styles/modules/group.module.css
@@ -42,7 +42,6 @@
   font-size: 18px;
   text-align: center;
   text-transform: capitalize;
-  /* color: var(--hsl-color-1); */
   background: var(--fds-blue-80);
   cursor: pointer;
 }
@@ -50,7 +49,6 @@
 .menuLeft .btnNewGroup i {
   margin-right: 5px;
   font-size: 22px;
-  /* color: var(--hsl-color-1); */
 }
 
 .menuLeft hr {
@@ -162,31 +160,33 @@
 
 .postSugess {
   width: 250px;
-  height: 300px;
+  min-height: 300px;
+  max-height: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-bottom: 30px;
   background: var(--secondary-bg);
   border-radius: 10px;
+  box-sizing: border-box;
 }
 
 .postSugess a img {
   width: 100%;
-  height: 40%;
+  height: 150px;
   border-radius: 10px 10px 0px 0px;
 }
 
 .postSugess div {
   width: 100%;
-  height: 50%;
-  padding: 20px;
+  min-height: 50%;
+  max-height: fit-content;
+  padding: 0px 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.postSugess div .nameGroupMembres {
-  padding: 0px;
-  padding-bottom: 20px;
-  margin: 0px;
-}
 
 .postSugess div .nameGroupMembres a {
   display: flex;
@@ -204,8 +204,11 @@
   font-weight: normal;
   color: gray;
 }
-
-.postSugess div button {
+.postSugess div .btns{
+  display: flex;
+  gap: 5px;
+}
+.postSugess div .btns button {
   padding: 8px 0px;
   font-size: 18px;
   border-radius: 10px;
@@ -214,11 +217,8 @@
   border: none;
   cursor: pointer;
 }
-.postSugess div button:first-of-type {
+.postSugess div .btns button:first-of-type {
   background: var(--hsl-color-1);
-}
-.declineBtn {
-  margin-top: 10px;
 }
 
 .contentListYourGroups {
@@ -380,29 +380,23 @@
     height: fit-content;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    gap: 10px;
-    padding-top: 20px;
+    gap: 40px;
     margin-bottom: 10rem;
   }
 
   .postSugess {
-    width: 40%;
     height: fit-content;
     display: flex;
-    flex-direction: row;
     gap: 10px;
-    background: transparent;
+    padding-bottom: 10px;
   }
   .postSugess a img {
-    width: 80px;
-    height: 80px;
     border-radius: 10px;
   }
   .postSugess div {
     width: 100%;
     height: fit-content;
-    padding: 0px;
+ 
   }
   .postSugess div .nameGroupMembres a {
     justify-content: start;
@@ -410,8 +404,8 @@
     gap: 5px;
   }
 
-  .postSugess div button {
-    display: none;
+  .postSugess div .btns {
+    padding-top: 10px;
   }
 
   .menuLeft .blocNav h4 span {
@@ -424,7 +418,7 @@
 }
 @media screen and (max-width: 450px) {
   .postSugess {
-    width: 80%;
+    width: 100%;
   }
   .elementGroup {
     width: 90%;
