--- a/frontend/styles/modules/Header.module.css
+++ b/frontend/styles/modules/Header.module.css
@@ -1,180 +1,265 @@
 .top {
-    z-index: 999;
+  z-index: 999;
 }
 
 .fixed {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 10;
-    background-color: rgb(20, 20, 20);
-    border-bottom: solid .1rem rgb(20, 20, 20);
-    z-index: 999;
-
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+  background-color: rgb(20, 20, 20);
+  border-bottom: solid 0.1rem rgb(20, 20, 20);
+  z-index: 999;
 }
 
 .mainHeader {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--secondary-bg);
-    padding: 0 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--secondary-bg);
+  padding: 0 10px;
 }
 
 .topContent {
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    font-size: 19px;
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 19px;
 }
 
-.mainHeader  .topContent h2 {
-    width: fit-content;
-    text-transform: capitalize;
-    font-size: 25px;
+.mainHeader .topContent h2 {
+  width: fit-content;
+  text-transform: capitalize;
+  font-size: 25px;
 }
 
 .topContentIcons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
 }
 
 .topContentIcons i {
-    display: flex;
-    background-color: var(--primary-bg);
-    padding: 5px;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+  display: flex;
+  background-color: var(--primary-bg);
+  padding: 5px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .middleContent {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    margin: 10px;
-    margin-bottom: 15px;
-    padding: 0 10px;
-    padding-top: 10px;
-    padding-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin: 10px;
+  margin-bottom: 15px;
+  padding: 0 10px;
+  padding-top: 10px;
+  padding-right: 20px;
 }
 
 .middleContent i {
-    font-size: 18px;
-    color: gray;
+  font-size: 18px;
+  color: gray;
 }
 
 .middleContent i:hover {
-    color: var(--second-blue);
+  color: var(--second-blue);
 }
 
-
 .middleContent a i {
-    position: relative;
+  position: relative;
 }
 
 .middleContent a i span {
-    position: absolute;
-    background-color: #e90000;
-    font-size: 10px;
-    padding: 5px;
-    border-radius: 50%;
-    top: -5px;
-    right: -18px;
-    cursor: pointer;
+  position: absolute;
+  background-color: #e90000;
+  font-size: 10px;
+  padding: 5px;
+  border-radius: 50%;
+  top: -5px;
+  right: -18px;
+  cursor: pointer;
 }
 
-
 .middleContent0 {
-    display: none;
+  display: none;
 }
 
 /* menu deroulant */
 .topContent .dropdownMenu {
-    width: fit-content;
-    height: fit-content;
-    position: absolute;
-    top: 80px;
-    right: 25px;
-    padding: 5px 0px;
-    border-radius: 8px;
-    border: 1px solid gray;
-    background: #202123;
+  width: fit-content;
+  height: fit-content;
+  position: absolute;
+  top: 80px;
+  right: 25px;
+  padding: 5px 0px;
+  border-radius: 8px;
+  border: 1px solid gray;
+  background: #202123;
 }
-.topContent .dropdownMenu ul  {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+.topContent .dropdownMenu ul {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .topContent .dropdownMenu ul li {
-    padding: 10px;
-    list-style: none;
-    cursor: pointer;
+  padding: 10px;
+  list-style: none;
+  cursor: pointer;
 }
 .topContent .dropdownMenu ul li i {
-    margin-right: 10px; 
+  margin-right: 10px;
 }
 .topContent .dropdownMenu ul li:hover {
-   background: #40414f;;
+  background: #40414f;
 }
-
 
 @media screen and (min-width: 768px) {
-    .mainHeader .topContent {
-        width: 100%;
-        display: flex;
-    }
+  .mainHeader .topContent {
+    width: 100%;
+    display: flex;
+  }
 
-    .mainHeader .topContent h2 {
-        font-size: 32px;
-        width: fit-content;
-    }
+  .mainHeader .topContent h2 {
+    font-size: 32px;
+    width: fit-content;
+  }
 
-    .topContenticons {
-        gap: 0px;
+  .topContenticons {
+    gap: 0px;
+  }
 
-    }
+  .middleContent1 {
+    display: none;
+  }
 
-    .middleContent1 {
-        display: none;
-    }
+  .middleContent0 {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 11%;
+  }
 
-    .middleContent0 {
-        width: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        gap: 11%;
-    }
+  .middleContent i {
+    margin-left: 50px;
+    font-size: 30px;
+  }
 
-
-    .middleContent i {
-        margin-left: 50px;
-        font-size: 30px;
-    }
-
-    .middleContent i:first-of-type {
-        margin-left: 0px;
-    }
+  .middleContent i:first-of-type {
+    margin-left: 0px;
+  }
 }
 
-@media screen and (min-width: 768px) and (max-width:900px) {
-    .topContent h2 {
-        width: fit-content;
-    }
+@media screen and (min-width: 768px) and (max-width: 900px) {
+  .topContent h2 {
+    width: fit-content;
+  }
 
-    .middleContent0 {
-        width: 100%;
+  .middleContent0 {
+    width: 100%;
+  }
+}
+
+/* toast Notification */
+
+.card {
+    position: fixed;
+    bottom:  20px;
+    left:  20px;
+    max-width:  320px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    border-radius:  0.5rem;
+    background: #606c88;
+    background: -webkit-linear-gradient(to right, #3f4c6b, #606c88);
+    background: linear-gradient(to right top, #3f4c6b, #606c88);
+    padding:  1rem;
+    opacity:  0;
+    color: rgb(107,  114,  128);
+    box-shadow:  0px  87px  78px -39px rgba(0,  0,  0,  0.4);
+    animation: fadeIn  1s ease-in-out forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity:  0;
     }
+    to {
+      opacity:  1;
+    }
+  }
+
+.icon {
+  height: 2rem;
+  width: 2rem;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  background-color: #153586;
+  color: rgb(59, 130, 246);
+}
+
+.icon svg {
+  height: 1.25rem;
+  width: 1.25rem;
+}
+
+.content {
+  margin-left: 0.75rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+}
+
+.title {
+  margin-bottom: 0.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 600;
+  color: rgb(255, 255, 255);
+}
+
+.desc {
+  margin-bottom: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  color: rgb(202, 200, 200);
+}
+
+.close {
+  margin: -0.375rem -0.375rem -0.375rem auto;
+  height: 2rem;
+  width: 2rem;
+  display: inline-flex;
+  border-radius: 0.5rem;
+  background-color: #606c88;
+  padding: 0.375rem;
+  color: rgba(255, 255, 255, 1);
+  border: none;
+  cursor: pointer;
+}
+
+.close svg {
+  height: 1.25rem;
+  width: 1.25rem;
+}
+
+.close:hover {
+  background-color: rgb(58, 69, 83);
 }
