--- a/frontend/styles/modules/group.module.css
+++ b/frontend/styles/modules/group.module.css
@@ -83,6 +83,18 @@
   padding: 5px;
 }
 
+.listGroupManaged .group  .notifGroup{
+  position: relative;
+  background-color: #e90000;
+  font-size: 10px;
+  padding: 5px;
+  border-radius: 50%;
+  /* top: 5px;  */
+  left: -99px;
+  top: 20px; 
+  cursor: pointer;
+
+}
 .listGroupManaged .group a img {
   width: 50px;
   height: 50px;
