--- a/frontend/styles/modules/group.module.css
+++ b/frontend/styles/modules/group.module.css
@@ -84,15 +84,16 @@
 }
 
 .listGroupManaged .group  .notifGroup{
-  position: relative;
+  position: absolute;
   background-color: #e90000;
   font-size: 10px;
   padding: 5px;
   border-radius: 50%;
   /* top: 5px;  */
-  left: -99px;
-  top: 20px; 
+  /* left: -99px; */
+  /* top: 20px;  */
   cursor: pointer;
+  margin-left: 12px;
 
 }
 .listGroupManaged .group a img {
