--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -24,33 +24,78 @@
   justify-content: space-between;
 }
 
-.post .profileuser .left-side,
-.profileuser .right-side {
+.post .profileuser .left-side {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   font-size: 12px;
-  gap: 5px;
-}
-
-.post .profileuser .left-side span p {
-  font-weight: 100;
+  gap: 0px;
 }
 
 .profile-pic {
+  overflow: hidden;
+  padding-top: 10px;
+}
+.profile-pic-simple {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
   border: solid 2px;
-  padding-top: 10px;
+}
+.profile-pic-group {
+  padding-bottom: 10px;
+}
+.post .profileuser .left-side .profile-pic-simple a img {
+  
+  width: 100%;
+  height: 100%;
+}
+.post .profileuser .left-side .profile-pic-group a img {
+  width: 50px;
+  height: 50px;
+}
+.post .profileuser .left-side .profile-pic-group a:last-of-type {
+  position: relative;
+  left: -20px;
+  bottom: -8px;
+  z-index: 99;
 }
 
-.post .profileuser .left-side img {
-  width: 100%;
+.post .profileuser .left-side span p {
+  font-weight: 100;
+}
+.post .profileuser .left-side .span-group {
+  position: relative;
+  left: -10px;
+}
+.post .profileuser .left-side .span-group h3:first-of-type {
+  margin-bottom: 5px;
+}
+
+.post .profileuser .left-side  .span-simple{
+  position: relative;
+  left: 10px;
+}
+
+.post
+  .profileuser
+  .left-side
+  .profile-pic-group
+  a:first-of-type
+  img:first-of-type {
+  border-radius: 20%;
+}
+.post
+  .profileuser
+  .left-side
+  .profile-pic-group
+  a:last-of-type
+  img:last-of-type {
+  width: 40px;
+  height: 40px;
 }
 
 .Follow,
@@ -175,11 +220,10 @@
   width: 100px;
   height: 100px;
 }
-.noResults p{
+.noResults p {
   width: 80%;
   text-align: center;
 }
-
 
 @media screen and (min-width: 768px) {
   .section-index {
